--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
+          <li><a href="#about">About</a></li>
+          <li><a href="#advanced-features">Community</a></li>
           <li><a href="#team">Projects</a></li>
 
         </ul>
@@ -62,7 +64,7 @@
 
     <div class="intro-text"><br><br><br>
       <p>A Forward Thinking Community <br>Developing World Changing Applications</p>
-      <a href="#team" class="btn-get-started scrollto">Learn More</a>
+      <a href="#about" class="btn-get-started scrollto">Learn More</a>
     </div>
 
 
@@ -71,7 +73,82 @@
 
   <main id="main">
 
+    <!--==========================
+      About Us Section
+    ============================-->
+    <section id="about" class="section-bg">
+      <div class="container-fluid">
 
+
+        <div class="row">
+          <div class="col-lg-6 about-img wow fadeInLeft">
+            <img src="img/about-img.jpg" alt="">
+          </div>
+
+          <div class="col-lg-6 content wow fadeInRight"><br><br><br>
+            <h2>Creating Technologies To Enable And Empower </h2>
+            <h3>Our focus is pushing the boundaries and  capabilities of decentralized protocols.</h3>
+            <p>
+              The next iteration of the web and applications therin are centered around the concepts of distributed data, and layers of mesh networks. The Universal Bit Project seeks to build a foundation to springboard development and applications for this next generation.
+            </p>
+
+            <p>
+             Our aim is to innovate legacy systems such as search engines and media distribution platforms, by integrating decentralized technologies such as blockchains and IPFS.
+            </p>
+
+<br><br><br>
+
+          </div>
+        </div>
+
+      </div>
+    </section><!-- #about -->
+
+
+    <!--==========================
+      Product Advanced Featuress Section
+    ============================-->
+    <section id="advanced-features">
+
+
+      <div class="features-row">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <img class="advanced-feature-img-right" src="img/community.jpg" alt="">
+              <div class="wow fadeInLeft">
+                <h2>Join Our Growing Online Community.</h2>
+            <p>  It is our intention to cultivate a cohesive and collaborative collective with the common goal of building practical and useful technologies.  Our focus is local, and our impact is global. Welcome to our future, this community is one of many, and we look forward to seeing what we can do together... </p>
+
+
+                <i class="ion-ios-world-outline" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i>
+                <p class="wow fadeInLeft" data-wow-duration="0.5s"><strong>Inclusive, </strong>Our principles are founded on the the open source ideology and our philosophy is rooted in decentraled methodologies. This encourages our organization to be open to a spectrum of perspectives.  </p>
+
+                <i class="ion-ios-flask-outline" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i>
+                <p class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"><strong>Agile, </strong> We utilize various tools for communication and collaboration to allow for our team to operate at high efficiency. </p>
+
+                <i class="ion-ios-color-filter-outline" class= "wow fadeInLeft" data-wow-delay="0.4" data-wow-duration="0.5s"></i>
+                <p class="wow fadeInLeft" data-wow-delay="0.4s" data-wow-duration="0.5s"><strong>Holocratic, </strong>This approach to the organizational structure allows for participants to leverage their skillset and knowledgebase in the roles they may maximize thier efforts.</p>
+
+
+
+
+<a href="https://github.com/unibitlabs">  <i class="ion-social-github" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i></a>
+&nbsp;&nbsp;  <a href="https://reddit.com/r/unibitproject">  <i class="ion-social-reddit" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i></a>
+&nbsp;&nbsp;    <a href="https://t.me/">    <i class="ion-paper-airplane" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i></a>
+&nbsp;&nbsp; <a href="https://twitter.com/unibitproject">  <i class="ion-social-twitter" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i></a>
+              <!-- Add font awesome icons -->
+
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      </div>
+    </section><!-- #advanced-features -->
 
 
     <!--==========================
@@ -84,29 +161,35 @@
           <span class="section-divider"></span>
           <p class="section-description"></p>
         </div>
+
+
+
+
+
+
+
+
 <div class="row wow fadeInUp">
         <div class="col-lg-3 col-md-6">
           <div class="member">
-            <div class="pic"><a href="http://scout.click"><img src="img/123.png" alt=""></a></div>
+            <div class="pic"><a href="http://scout.click"><img src="img/scout.png" alt=""></a></div>
             <a href="http://scout.click"><h2>Scout Click</h2></a>
                 <a href="http://scout.click"><p>Search Engine Platform</p></a>
             <div class="social">
               <a href="https://www.twitter.com/scoutclick"><i class="fa fa-twitter"></i></a>
               <a href="https://www.facebook.com/scout.click"><i class="fa fa-facebook"></i></a>
-              <a href=""><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-6">
           <div class="member">
-            <div class="pic"><a href="http://explorer.unibit.io"><img src="img/123.png" alt=""></a></div>
+            <div class="pic"><a href="http://explorer.unibit.io"><img src="img/unibit.png" alt=""></a></div>
             <a href="http://explorer.unibit.io"><h2>UNIBIT</h2></a>
                 <a href="http://explorer.sunibit.io"><p>Blockchain Framework</p></a>
             <div class="social">
               <a href="https://www.twitter.com/unibitproject"><i class="fa fa-twitter"></i></a>
               <a href="https://www.facebook.com/unibitproject/"><i class="fa fa-facebook"></i></a>
-              <a href=""><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -127,14 +210,8 @@
       <div class="row">
         <div class="col-lg-6 text-lg-center text-center">
           <div class="copyright">
-            &copy;2018 <strong>Universal Bit Project</strong>. 
-
-          <a href="#" class="fa fa-github"></a>
-          <a href="#" class="fa fa-slack"></a>
-          <a href="#" class="fa fa-telegram"></a>
-          <a href="#" class="fa fa-twitter"></a>
-          <a href="#" class="fa fa-discord"></a>
-              </div>
+            &copy; Copyright <strong>Universal Bit Project</strong>. All Rights Reserved
+          </div>
 
         </div>
 
