--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
         <div class="col-lg-3 col-md-6">
           <div class="member">
-            <div class="pic"><a href="http://explorer.unibit.io"><img src="img/unibit.png" alt=""></a></div>
+            <div class="pic"><a href="https://unibitlabs.github.io/"><img src="img/unibit.png" alt=""></a></div>
             <a href="http://explorer.unibit.io"><h2>UNIBIT</h2></a>
                 <a href="http://explorer.sunibit.io"><p>Blockchain Framework</p></a>
             <div class="social">
