--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 
                 <i class="ion-ios-world-outline" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i>
-                <p class="wow fadeInLeft" data-wow-duration="0.5s"><strong>Inclusive, </strong>Our principles are founded on the the open source ideology and our philosophy is rooted in decentraled methodologies. This encourages our organization to be open to a spectrum of perspectives.  </p>
+                <p class="wow fadeInLeft" data-wow-duration="0.5s"><strong>Inclusive, </strong>Our principles are founded on the the open source ideology and our philosophy is rooted in decentralized methodologies. This encourages our organization to be open to a spectrum of perspectives.  </p>
 
                 <i class="ion-ios-flask-outline" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i>
                 <p class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"><strong>Agile, </strong> We utilize various tools for communication and collaboration to allow for our team to operate at high efficiency. </p>
@@ -135,7 +135,7 @@
 
 <a href="https://github.com/unibitlabs">  <i class="ion-social-github" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i></a>
 &nbsp;&nbsp;  <a href="https://reddit.com/r/unibitproject">  <i class="ion-social-reddit" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i></a>
-&nbsp;&nbsp;    <a href="https://t.me/">    <i class="ion-paper-airplane" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i></a>
+&nbsp;&nbsp;    <a href="https://t.me/joinchat/FH-p-0BiMCSFR5ht5XxCHg">    <i class="ion-paper-airplane" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i></a>
 &nbsp;&nbsp; <a href="https://twitter.com/unibitproject">  <i class="ion-social-twitter" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i></a>
               <!-- Add font awesome icons -->
 
