--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <p>  It is our intention to cultivate a cohesive and collaborative collective with the common goal of building practical and useful technologies.  Our focus is local, and our impact is global. Welcome to our future, this community is one of many, and we look forward to seeing what we can do together... </p>
 
 
-                <i class="ion-ios-world-outline" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i>
+            <i class="ion-ios-world-outline" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i>
                 <p class="wow fadeInLeft" data-wow-duration="0.5s"><strong>Inclusive, </strong>Our principles are founded on the the open source ideology and our philosophy is rooted in decentralized methodologies. This encourages our organization to be open to a spectrum of perspectives.  </p>
 
                 <i class="ion-ios-flask-outline" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i>
@@ -138,6 +138,35 @@
 &nbsp;&nbsp;    <a href="https://t.me/joinchat/FH-p-0BiMCSFR5ht5XxCHg">    <i class="ion-paper-airplane" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i></a>
 &nbsp;&nbsp; <a href="https://twitter.com/unibitproject">  <i class="ion-social-twitter" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i></a>
               <!-- Add font awesome icons -->
+
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      </div>
+    </section><!-- #advanced-features -->
+
+
+    <!--==========================
+      Our Team Section
+    ============================-->
+    <section id="team" class="section-bg">
+      <div class="container">
+        <div class="section-header">
+          <h3 class="section-title">Our Projects</h3>
+          <span class="section-divider"></span>
+          <p class="section-description"></p>
+        </div>
+
+
+
+
+
+
 
 
               </div>
