--- a/index.html
+++ b/index.html
@@ -166,15 +166,24 @@
         <div class="col-lg-3 col-md-6">
           <div class="member">
             <div class="pic"><a href="http://scout.click"><img src="img/scout.png" alt=""></a></div>
-            <a href="http://scout.click"><h2>Scout Click</h2></a>
-                <a href="http://scout.click"><p>Search Engine Platform</p></a>
+            <a href="http://scout.click"><h2>Scout.Click</h2></a>
+                <a href="http://scout.click"><p>Next Generation Search Engine</p></a>
             <div class="social">
               <a href="https://www.twitter.com/scoutclick"><i class="fa fa-twitter"></i></a>
               <a href="https://www.facebook.com/scout.click"><i class="fa fa-facebook"></i></a>
             </div>
           </div>
         </div>
-
+        <div class="col-lg-3 col-md-6">
+          <div class="member">
+            <div class="pic"><a href="http://vote.rockthepoll.com"><img src="img/" alt=""></a></div>
+            <a href="http://vote.rockthepoll.com"><h2>Vote App</h2></a>
+                <a href="http://vote.rockthepoll.com"><p>Rock The Poll Vote App</p></a>
+            <div class="social">
+              <a href="https://www.twitter.com/unibitproject"><i class="fa fa-twitter"></i></a>
+            </div>
+          </div>
+        </div>
         <div class="col-lg-3 col-md-6">
           <div class="member">
             <div class="pic"><a href="http://explorer.unibit.io"><img src="img/unibit.png" alt=""></a></div>
