--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
         </div>
         <div class="col-lg-3 col-md-6">
           <div class="member">
-            <div class="pic"><a href="http://explorer.unibit.io"><img src="img/unibit.png" alt=""></a></div>
-            <a href="http://explorer.unibit.io"><h2>UNIBIT</h2></a>
-                <a href="http://explorer.sunibit.io"><p>Blockchain Framework</p></a>
+            <div class="pic"><a href="http://www.unibit.io"><img src="img/unibit.png" alt=""></a></div>
+            <a href="http://www.unibit.io"><h2>UNIBIT</h2></a>
+                <a href="http://www.unibit.io"><p>Blockchain Framework</p></a>
             <div class="social">
               <a href="https://www.twitter.com/unibitproject"><i class="fa fa-twitter"></i></a>
               <a href="https://www.facebook.com/unibitproject/"><i class="fa fa-facebook"></i></a>
@@ -212,7 +212,7 @@
       <div class="row">
         <div class="col-lg-6 text-lg-center text-center">
           <div class="copyright">
-            &copy; Copyright <strong>Universal Bit Project</strong>. All Rights Reserved
+            <strong>Universal Bit Project</strong>
           </div>
 
         </div>
