--- a/index.html
+++ b/index.html
@@ -184,6 +184,16 @@
             </div>
           </div>
         </div>
+       <div class="col-lg-3 col-md-6">
+          <div class="member">
+            <div class="pic"><a href="https://securedoc.io"><img src="img/" alt=""></a></div>
+            <a href="https://securedoc.io"><h2>CryptIt App</h2></a>
+                <a href="https://securedoc.io"><p>Simple Encryption App</p></a>
+            <div class="social">
+              <a href="https://www.twitter.com/unibitproject"><i class="fa fa-twitter"></i></a>
+            </div>
+          </div>
+        </div>
         <div class="col-lg-3 col-md-6">
           <div class="member">
             <div class="pic"><a href="http://www.unibit.io"><img src="img/unibit.png" alt=""></a></div>
