--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </div>
         <div class="col-lg-3 col-md-6">
           <div class="member">
-            <div class="pic"><a href="http://vote.rockthepoll.com"><img src="img/" alt=""></a></div>
+            <div class="pic"><a href="http://vote.rockthepoll.com"><img src="img/every-vote-counts.jpg" alt=""></a></div>
             <a href="http://vote.rockthepoll.com"><h2>Vote App</h2></a>
                 <a href="http://vote.rockthepoll.com"><p>Rock The Poll Vote App</p></a>
             <div class="social">
@@ -198,7 +198,7 @@
           <div class="member">
             <div class="pic"><a href="http://www.unibit.io"><img src="img/unibit.png" alt=""></a></div>
             <a href="http://www.unibit.io"><h2>UNIBIT</h2></a>
-                <a href="http://www.unibit.io"><p>Blockchain Framework</p></a>
+                <a href="http://www.unibit.io"><p>DAPP Framework</p></a>
             <div class="social">
               <a href="https://www.twitter.com/unibitproject"><i class="fa fa-twitter"></i></a>
               <a href="https://www.facebook.com/unibitproject/"><i class="fa fa-facebook"></i></a>
@@ -221,8 +221,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 text-lg-center text-center">
-          <div class="copyright">
-            <strong>Universal Bit Project</strong>
+          <div class="copyright"><center>
+            <strong>Universal Bit Project</strong></center>
           </div>
 
         </div>
