--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </div>
         <div class="col-lg-3 col-md-6">
           <div class="member">
-            <div class="pic"><a href="http://vote.rockthepoll.com"><img src="img/every-vote-counts.jpg" alt=""></a></div>
+            <div class="pic"><a href="http://vote.rockthepoll.com"><img src="img/every_vote_counts.jpg" alt=""></a></div>
             <a href="http://vote.rockthepoll.com"><h2>Vote App</h2></a>
                 <a href="http://vote.rockthepoll.com"><p>Rock The Poll Vote App</p></a>
             <div class="social">
