--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         </div>
        <div class="col-lg-3 col-md-6">
           <div class="member">
-            <div class="pic"><a href="https://securedoc.io"><img src="img/Untitled.png" alt=""></a></div>
+            <div class="pic"><a href="https://securedoc.io"><img src="img/lock2.png" alt=""></a></div>
             <a href="https://securedoc.io"><h2>CryptIt App</h2></a>
                 <a href="https://securedoc.io"><p>Simple Encryption App</p></a>
             <div class="social">
