--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
 
           <div class="col-lg-6 content wow fadeInRight"><br><br><br>
             <h2>Creating Technologies To Enable And Empower </h2>
-            <h3>Our focus is pushing the boundaries and  capabilities of decentralized protocols.</h3>
+            <h3>Our focus is pushing the boundaries and  capabilities of decentralized protocols.</h3><br>
             <p>
               The next iteration of the web and applications therin are centered around the concepts of distributed data, and layers of mesh networks. The Universal Bit Project seeks to build a foundation to springboard development and applications for this next generation.
             </p>
-
+<br>
             <p>
              Our aim is to innovate legacy systems such as search engines and media distribution platforms, by integrating decentralized technologies such as blockchains and IPFS.
             </p>
@@ -100,7 +100,6 @@
 
           </div>
         </div>
-
       </div>
     </section><!-- #about -->
 
@@ -136,6 +135,7 @@
 <a href="https://github.com/unibitlabs">  <i class="ion-social-github" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i></a>
 &nbsp;&nbsp;  <a href="https://reddit.com/r/unibitproject">  <i class="ion-social-reddit" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i></a>
 &nbsp;&nbsp;    <a href="https://t.me/joinchat/FH-p-0BiMCSFR5ht5XxCHg">    <i class="ion-paper-airplane" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i></a>
+&nbsp;&nbsp; <a href="https://twitter.com/unibitproject">  <i class="ion-social-slack" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i></a>
 &nbsp;&nbsp; <a href="https://twitter.com/unibitproject">  <i class="ion-social-twitter" class="wow fadeInLeft" data-wow-delay="0.2s" data-wow-duration="0.5s"></i></a>
               <!-- Add font awesome icons -->
 
