--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
             <h2>Creating Technologies To Enable And Empower </h2>
             <h3>Our focus is pushing the boundaries and  capabilities of decentralized protocols.</h3><br>
             <p>
-              The next iteration of the web and applications therin are centered around the concepts of distributed data, and layers of mesh networks. The Universal Bit Project seeks to build a foundation to springboard development and applications for this next generation.
+              The next iteration of the web and applications therin are centered around the concepts of distributed data, and layers of mesh networks.<br> 
+              The Universal Bit Project seeks to build a foundation to springboard development and applications for this next generation.
             </p>
 <br>
             <p>
