--- a/index.html
+++ b/index.html
@@ -90,10 +90,7 @@
             <h3>Our focus is pushing the boundaries and  capabilities of decentralized protocols.</h3><br>
             <p>
               The next iteration of the web and applications therin are centered around the concepts of distributed data, and layers of mesh networks.<br> 
-              The Universal Bit Project seeks to build a foundation to springboard development and applications for this next generation.
-            </p>
-<br>
-            <p>
+              The Universal Bit Project seeks to build a foundation to springboard development and applications for this next generation.<br>
              Our aim is to innovate legacy systems such as search engines and media distribution platforms, by integrating decentralized technologies such as blockchains and IPFS.
             </p>
 
